--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,27 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Raleway");
+
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background-image: linear-gradient(
+    to right top,
+    #55d4d6,
+    #19d9c7,
+    #00ddac,
+    #20de88,
+    #55dd5b
+  );
+  background-size: cover;
 }
