--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.container {
+  height: 100vh;
+}
+
 header h1 {
   position: absolute;
   left: 50%;
@@ -17,11 +21,18 @@ header h1 {
   border-radius: 10px;
 }
 
-.keys {
-  height: 100vh;
+.keys-container {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.keys {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .key {
@@ -34,6 +45,7 @@ header h1 {
   color: #2e5eaa;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
   font-weight: 400;
+  cursor: pointer;
   transition: 0.2s ease-out;
 }
 
@@ -57,4 +69,59 @@ kbd {
   display: block;
   font-size: 3rem;
   padding: 0.2rem;
+}
+
+@media all and (min-width: 420px) and (max-width: 550px) {
+  header h1 {
+    font-size: 3rem;
+    line-height: 4rem;
+    width: 90%;
+  }
+}
+
+@media all and (min-width: 320px) and (max-width: 420px) {
+  header h1 {
+    font-size: 2.5rem;
+    margin-top: 8vh;
+    line-height: 4rem;
+    width: 90%;
+  }
+
+  .key {
+    padding: 1rem;
+    margin: 0.5rem;
+    width: 6rem;
+  }
+}
+
+@media all and (max-width: 320px) {
+  header h1 {
+    font-size: 2.5rem;
+    margin-top: 5vh;
+    line-height: 4rem;
+    width: 90%;
+  }
+
+  .key {
+    padding: 1rem;
+    margin: 0.2rem;
+    width: 6rem;
+  }
+}
+
+@media (hover: none), (hover: on-demand) {
+  .key:hover {
+    opacity: 1;
+    transform: translateY(0px);
+    background-color: #f4fafa;
+    color: #2e5eaa;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+  }
+  .key:active {
+    box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.25);
+    opacity: 0.85;
+    transform: translateY(-2px);
+    background-color: #292626;
+    color: #dfe6e9;
+  }
 }
